[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "risksim"
version = "0.2.1"
description = "Portfolio-level loss simulation and aggregate treaty modeling in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy"]
keywords = ["actuarial", "insurance", "simulation", "risk", "reinsurance"]
authors = [
  { name = "Michael Bryant" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/OpenActuarial/risksim/"
Repository = "https://github.com/OpenActuarial/risksim/"
Documentation = "https://openactuarial.github.io/docs/risksim/"
Issues = "https://github.com/OpenActuarial/risksim/issues/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
