[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "risksim"
version = "0.4.0"
description = "Portfolio Monte Carlo simulation and risk measures: aggregate outcomes across contracts, reinsurance layers and programs, and VaR/TVaR on the simulated distribution."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Michael Bryant" }]
keywords = ["actuarial", "insurance", "simulation", "risk", "reinsurance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/OpenActuarial/risksim"
Documentation = "https://openactuarial.org/risksim.html"
Repository = "https://github.com/OpenActuarial/risksim"
Issues = "https://github.com/OpenActuarial/risksim/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/risksim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
